fix: fix flicker in theme change

--- a/assets/main.css
+++ b/assets/main.css
@@ -58,7 +58,7 @@ th {
 }
 
 .animate-fadeout {
-  animation: fadeOut 0.3s ease-out;
+  animation: fadeOut 0.2s ease-out;
 }
 
 .animate-bubble {
